<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="addUserViewModel"
            type="com.rounak.testapp.ui.add_user.AddUserViewModel" />
    </data>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_user.AddUserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/add_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameField"
                app:helperTextEnabled="true"
                app:helperText="Enter name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".05"
                app:layout_constraintWidth_max="430dp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_name"
                app:errorEnabled="true"
                app:startIconContentDescription="name"
                app:startIconDrawable="@drawable/ic_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={addUserViewModel.inputName}"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailField"
                app:helperTextEnabled="true"
                app:helperText="Enter email"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="@+id/nameField"
                app:layout_constraintEnd_toEndOf="@+id/nameField"
                app:layout_constraintTop_toBottomOf="@+id/nameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:startIconContentDescription="email"
                app:startIconDrawable="@drawable/ic_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={addUserViewModel.inputEmail}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneField"
                app:helperTextEnabled="true"
                app:helperText="Enter phone number"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="@+id/nameField"
                app:layout_constraintEnd_toEndOf="@+id/nameField"
                app:layout_constraintTop_toBottomOf="@+id/emailField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:errorEnabled="true"
                app:startIconContentDescription="@string/phone"
                app:startIconDrawable="@drawable/ic_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={addUserViewModel.inputPhone}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressField"
                app:helperTextEnabled="true"
                app:helperText="Enter address"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="@+id/nameField"
                app:layout_constraintEnd_toEndOf="@+id/nameField"
                app:layout_constraintTop_toBottomOf="@+id/phoneField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:imeOptions="actionDone"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={addUserViewModel.inputAddress}"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/submitBtn"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="17sp"
                android:onClick="@{addUserViewModel::addUser}"
                android:textAlignment="center"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="@dimen/_60sdp"
                app:layout_constraintTop_toBottomOf="@+id/addressField"
                app:layout_constraintStart_toStartOf="@+id/nameField"
                app:layout_constraintEnd_toEndOf="@+id/nameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>